--- a/index.html
+++ b/index.html
@@ -3,194 +3,175 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Expense Splitter App</title>
-        <!-- Bootstrap CDN for styling -->
+        <title>Expense Splitter</title>
         <link
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet"
         />
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="container mt-5">
-            <h1>Expense Splitter App</h1>
+        <div class="container my-4">
+            <h1 class="text-center mb-4">找數</h1>
+            <!-- Control Buttons -->
+            <div class="mb-3 d-flex gap-2">
+                <button class="btn btn-primary" onclick="showAddPersonModal()">
+                    添加人物
+                </button>
+                <button class="btn btn-success" onclick="showAddExpenseModal()">
+                    添加項目
+                </button>
+                <button class="btn btn-danger" onclick="clearRecords()">
+                    清除記錄
+                </button>
+            </div>
+            <!-- Expense Table -->
+            <h4>支出項目</h4>
+            <table class="table table-bordered" id="expenseTable">
+                <thead class="table-light">
+                    <tr class="text-center">
+                        <th>編號</th>
+                        <th>項目</th>
+                        <th>總額</th>
+                        <th>付款人</th>
+                        <th>分帳對象</th>
+                        <th>Edit</th>
+                    </tr>
+                </thead>
+                <tbody id="expenseTableBody"></tbody>
+            </table>
 
-            <!-- Button to Open the Add Persons Modal -->
-            <button
-                class="btn btn-primary"
-                data-toggle="modal"
-                data-target="#addPersonsModal"
-            >
-                Add Persons
-            </button>
-            <button
-                class="btn btn-primary"
-                data-toggle="modal"
-                data-target="#addExpenseModal"
-            >
-                Add Expense
-            </button>
-            <button class="btn btn-danger" onclick="clearLocalStorage()">
-                Clear Records
-            </button>
-
-            <!-- Add Persons Modal -->
-            <div
-                class="modal fade"
-                id="addPersonsModal"
-                tabindex="-1"
-                role="dialog"
-                aria-labelledby="addPersonsModalLabel"
-                aria-hidden="true"
-            >
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="addPersonsModalLabel">
-                                Add Persons
-                            </h5>
-                            <button
-                                type="button"
-                                class="close"
-                                data-dismiss="modal"
-                                aria-label="Close"
-                            >
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <label for="personsInput"
-                                >Enter persons (comma separated):</label
-                            >
-                            <textarea
-                                id="personsInput"
-                                class="form-control"
-                            ></textarea>
-                        </div>
-                        <div class="modal-footer">
-                            <button
-                                type="button"
-                                class="btn btn-secondary"
-                                data-dismiss="modal"
-                            >
-                                Close
-                            </button>
-                            <button
-                                type="button"
-                                class="btn btn-primary"
-                                onclick="addPersons()"
-                            >
-                                Add Persons
-                            </button>
-                        </div>
-                    </div>
-                </div>
+            <!-- Summary -->
+            <h4 class="d-flex justify-content-between align-items-center mb-3">
+                <span>總結</span>
+                <button
+                    class="toggleBtn btn btn-outline-primary"
+                    onclick="toggleSummaryView()"
+                >
+                    切換顯示方式
+                </button>
+            </h4>
+            <div class="mb-2 p-1">
+                <div id="personButtons" class="d-flex flex-wrap gap-2"></div>
             </div>
 
-            <!-- Add Expense Modal -->
-            <div
-                class="modal fade"
-                id="addExpenseModal"
-                tabindex="-1"
-                role="dialog"
-                aria-labelledby="addExpenseModalLabel"
-                aria-hidden="true"
-            >
-                <div class="modal-dialog" role="document">
+            <!-- Table View -->
+            <table class="table table-bordered summary-table">
+                <thead>
+                    <tr class="text-center">
+                        <th>人</th>
+                        <th>已支付</th>
+                        <th>明細</th>
+                        <th>需支付</th>
+                        <th>收款</th>
+                    </tr>
+                </thead>
+                <tbody id="summaryBody"></tbody>
+            </table>
+
+            <!-- Card View Container -->
+            <div id="summaryCardContainer" class="row d-none"></div>
+
+            <!-- Expense Modal -->
+            <div class="modal fade" id="expenseModal" tabindex="-1">
+                <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="addExpenseModalLabel">
-                                Add Expense
-                            </h5>
+                            <h5 class="modal-title">修改項目</h5>
                             <button
                                 type="button"
-                                class="close"
-                                data-dismiss="modal"
-                                aria-label="Close"
-                            >
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                            ></button>
                         </div>
                         <div class="modal-body">
-                            <form>
-                                <div class="form-group">
-                                    <label for="expenseName"
-                                        >Expense Name</label
-                                    >
-                                    <input
-                                        type="text"
-                                        class="form-control"
-                                        id="expenseName"
-                                    />
-                                </div>
-                                <div class="form-group">
-                                    <label for="expenseAmount"
-                                        >Total Expense</label
-                                    >
-                                    <input
-                                        type="number"
-                                        class="form-control"
-                                        id="expenseAmount"
-                                    />
-                                </div>
-                                <div class="form-group">
-                                    <label for="splitWith">Split With</label>
-                                    <select
-                                        multiple
-                                        class="form-control"
-                                        id="splitWith"
-                                    ></select>
-                                </div>
-                            </form>
+                            <input type="hidden" id="editingExpenseIndex" />
+                            <div class="mb-2">
+                                <label for="expenseNameInput" class="form-label"
+                                    >項目</label
+                                >
+                                <input
+                                    class="form-control"
+                                    id="expenseNameInput"
+                                    placeholder="e.g. Dinner"
+                                />
+                            </div>
+                            <div class="mb-2">
+                                <label
+                                    for="expenseAmountInput"
+                                    class="form-label"
+                                    >總額</label
+                                >
+                                <input
+                                    class="form-control"
+                                    type="number"
+                                    id="expenseAmountInput"
+                                    placeholder="e.g. 100"
+                                />
+                            </div>
+                            <div class="mb-2">
+                                <label class="form-label">付款人</label>
+                                <div
+                                    id="payerRadioGroup"
+                                    class="d-flex flex-wrap gap-2"
+                                ></div>
+                            </div>
+                            <div class="mb-2">
+                                <label class="form-label">分帳對象</label>
+                                <div
+                                    id="splitWithCheckboxGroup"
+                                    class="d-flex flex-wrap gap-2"
+                                ></div>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button
-                                type="button"
-                                class="btn btn-secondary"
-                                data-dismiss="modal"
-                            >
-                                Close
-                            </button>
-                            <button
-                                type="button"
                                 class="btn btn-primary"
                                 onclick="saveExpense()"
                             >
-                                Save
+                                確定
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Expense Records Table -->
-            <table class="table table-striped mt-3">
-                <thead>
-                    <tr>
-                        <th>Expense Name</th>
-                        <th>Total Amount</th>
-                        <th>Split With</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="expensesTableBody"></tbody>
-            </table>
-
-            <!-- Summary Table -->
-            <h2>Summary</h2>
-            <table class="table table-striped mt-3">
-                <thead>
-                    <tr>
-                        <th>Person</th>
-                        <th>Total Expense</th>
-                    </tr>
-                </thead>
-                <tbody id="summaryTableBody"></tbody>
-            </table>
+            <!-- Add Person Modal -->
+            <div class="modal fade" id="personModal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">增加人物</h5>
+                            <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                            ></button>
+                        </div>
+                        <div class="modal-body">
+                            <label for="personInput" class="form-label"
+                                >請輸入名稱 (以逗號分隔)</label
+                            >
+                            <input
+                                id="personInput"
+                                class="form-control"
+                                placeholder="e.g., Peter, Mary"
+                            />
+                        </div>
+                        <div class="modal-footer">
+                            <button
+                                class="btn btn-primary"
+                                onclick="addPersonFromModal()"
+                            >
+                                添加
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <script src="script.js"></script>
+        <script src="main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
