--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <!-- <button class="btn btn-danger" onclick="" disabled>
                     Load Records
                 </button> -->
-                <button class="btn btn-danger" onclick="clearRecords()">
+                <!-- <button class="btn btn-danger" onclick="clearRecords()">
                     Clear Records
-                </button>
+                </button> -->
 
             </div>
 
