--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="container my-4">
-            <h1 class="text-center mb-4">Bill Splitter</h1>
+            <!-- <h1 class="text-center mb-4">Bill Splitter</h1> -->
             <!-- Control Buttons -->
             <div class="mb-3 d-flex gap-2">
                 <button class="btn btn-primary" onclick="showAddPersonModal()">
@@ -175,7 +175,7 @@
                     </div>
                 </div>
             </div>
-            <div id="tips">123</div>
+            <!-- <div id="tips">123</div> -->
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
         <script src="main.js"></script>
